# docs/swagger.json
@@ -206,7 +206,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/database.UsersModel"
+                            "$ref": "#/definitions/user_views.UserCredential"
                         }
                     }
                 ],
@@ -669,6 +669,9 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
